Fianlisation connection base de donnée, ajout album et amelioration ajout plailist